kubernetes/ingress_resources.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: neuro-clash-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - host: neuro-clash.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: neuro-clash-web-app-ingress-service
            port:
              number: 80
              
  - host: api.neuro-clash.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: neuro-clash-api-ingress-service
            port:
              number: 80
